Fix a whitespace error in site.css

--- a/mythtv/html/css/site.css
+++ b/mythtv/html/css/site.css
@@ -10,7 +10,8 @@
     }
     h1 {
         font: 4em normal Georgia, 'Times New Roman', Times, serif;
-        padding: 20px;	margin: 0;
+        padding: 20px;
+        margin: 0;
         text-align:center;
     }
     h1 small{
